apps/argocd/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: mw-argocd
  namespace: argocd
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: http-argocd
  namespace: argocd
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`argocd.k3s.tsphotoclicks.net`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
      middlewares:
        - name: https-redirect
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: https-argocd
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.k3s.tsphotoclicks.net`)
      priority: 10
      services:
        - name: argocd-server
          port: 80
    - kind: Rule
      match: Host(`argocd.k3s.tsphotoclicks.net`) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
  tls:
    secretName: argocd-cert
